--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.0.0",
     "@nestjs/serve-static": "^4.0.0",
+    "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^10.0.0",
     "mysql2": "^3.14.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.2",
+    "typeorm": "^0.3.25",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
