--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.0.0",
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^10.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
@@ -42,6 +44,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@types/uuid": "^10.0.0",
