--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.0.0",
+    "@nestjs/schedule": "^6.0.0",
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^10.0.0",
