--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fix-null-participants": "ts-node scripts/fix-null-participants.ts"
   },
   "dependencies": {
+    "@nestjs/axios": "^4.0.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^11.0.0",
@@ -32,8 +33,10 @@
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^10.0.0",
+    "axios": "^1.11.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
+    "puppeteer": "^24.16.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "socket.io": "^4.7.2",
